Relecture Leo : intro + chap 1

--- a/manuscrit_G_LEFEBVRE/annexe_structure_code.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_structure_code.tex
@@ -3,9 +3,12 @@
 
 \begin{document}
 \chapter{Structuration des codes de calculs \label{chap:structure_code} }
-\mylettrine{D}{e} nombreux codes de calculs ont été développés durant la thèse. Outre le début de la thèse qui s'est déroulée sous Scilab dans le but de maquetter rapidement le code résolvant les différents modèles EDP, plusieurs codes ont été développés dans différents langages. 
+\mylettrine{D}{e} nombreux codes de calculs ont été développés durant la thèse. Outre le début de la thèse qui s'est déroulée sous Scilab dans le but de maquetter rapidement le code résolvant les différents modèles EDP, plusieurs codes ont été élaborés dans différents langages. 
 Sans tomber dans la présentation détaillée de l'ensemble des codes de calcul,  %développés pendant ma thèse, 
-faisons en un tour d'horizon. Ma thèse étant divisée en deux grandes parties, deux codes ont été développés~:
+faisons en un tour d'horizon. 
+Ma thèse étant divisée en deux grandes parties, deux codes ont été 
+implémentés~: 
+%% développés~:
 \begin{myitemize}
 \item le premier, pour résoudre le modèle EDP et fournir des simulations numériques qui reproduisent des croissances tumorales et des résistances aux traitements,
 \item le second, pour calculer un quantificateur de l'\hetero à partir d'une image, que ce soit une image provenant directement de l'appareil d'imagerie médicale ou une image provenant de la simulation numérique.
