--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -415,7 +415,7 @@ Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Chen, corres
 \FloatBarrier
 \section{Valeur des paramètres pour les simulations numériques de la Figure~\ref{fig:possibilites}}
 
-L'ensemble des paramètres utilisés pour réaliser la simulation numérique présentée Figure~\ref{fig:possibilites} de la section~\ref{section_possibilites} 
+L'ensemble des paramètres utilisés pour réaliser la simulation numérique présentée Figure~\ref{fig:possibilites} de la Section~\ref{section_possibilites} 
 est présenté dans la Table~\ref{table_param_possibilites}.
 
 \begin{table}[h]
