--- a/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
+++ b/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
@@ -524,7 +524,7 @@ Pour ce qui est du modèle complet, des simulations numériques ont été réali
 Nous utilisons une méthode de volumes finis sur grille uniforme 2D. Pour la simulation numérique, le domaine~$\Omega$ est le 
 rectangle~$[0,L]\times[0,D]$. Le domaine est maillé avec une grille cartésienne contenant~$N_x$ points sur l'axe~$x$ et~$N_y$ points sur l'axe~$y$.
 
-Les densités de cellules cancéreuses sont discrétisées au centre des mailles et les vitesses sont discrétisées au milieu de chaque arête comme montré sur la Figure~\ref{fig:place_inconnues}.
+Les densités de cellules cancéreuses sont discrétisées au centre des mailles et les vitesses sont discrétisées au milieu de chaque arête comme montrées sur la Figure~\ref{fig:place_inconnues}.
 
 \begin{figure}[h]
 \centering
