--- a/manuscrit_G_LEFEBVRE/glossaire.tex
+++ b/manuscrit_G_LEFEBVRE/glossaire.tex
@@ -24,7 +24,7 @@
 \item[Temps artériel] Temps après lequel un produit injecté en intraveineuse met pour parvenir au foie par l'artère hépatique.
 \item[Temps portal] Temps après lequel un produit injecté en intraveineuse met pour parvenir au foie par la veine porte.
 \item[Thérapie ciblée] Médicament ciblant un type spécifique de voie moléculaire, généralement caractéristique des cellules malignes. 
-\item[Tomodensimétrie] Taux d'absorption aux rayons X.
+\item[Tomodensitométrie] Taux d'absorption aux rayons X. Synonyme de scanographie. 
 \item[Tyrosine kinase] Enzyme commandant de nombreuses fonctions cellulaires (dont pour certaines, le processus de division).
 \end{description}
 \end{document}
