--- a/manuscrit_G_LEFEBVRE/publi_GIST-fr.tex
+++ b/manuscrit_G_LEFEBVRE/publi_GIST-fr.tex
@@ -204,14 +204,14 @@
 
 
 \begin{abstract}
-Ce travail est consacré à la modélisation de métastases hépatiques en provenance de tumeur du stroma gastrointestinal (GIST), à leur croissance et leurs résistances aux thérapies. On s'intéressera plus précisément aux résistances, observées cliniquement, aux deux traitements standards basés sur des inhibiteurs de tyrosine kinase (imatinib et sunitinib). 
+Ce travail est consacré à la modélisation de métastases hépatiques en provenance de tumeur du stroma gastro-intestinal (GIST), à leur croissance et leurs résistances aux thérapies. On s'intéressera plus précisément aux résistances, observées cliniquement, aux deux traitements standards basés sur des inhibiteurs de tyrosine kinase (imatinib et sunitinib). 
 Partant d'observations sur les images médicales (scanners), nous construisons un modèle spatial qui consiste en un système d'équations aux dérivées partielles non linéaire. Après calibration de ses paramètres avec les données cliniques, le modèle reproduit, qualitativement et quantitativement, l'évolution spatiale de la tumeur d'un patient spécifique. D'importants résultats sur la croissance, comme l'apparition de l'hétérogénéité spatiale ou les rechutes, peuvent être expliqués par notre modèle. 
 Ensuite, nous investiguons sur la possibilité d'optimiser le traitement numériquement, en terme de temps de survie sans aggravation et en terme de taille minimale atteinte par la tumeur en faisant varier la dose du premier traitement. Selon notre modèle, le temps de survie sans aggravation  atteint un plateau en fonction de la dose. Nous démontrons également numériquement, que la structure spatiale de la tumeur peut fournir plus d'informations sur l'activité des cellules cancéreuses que le critère standard RECIST qui consiste uniquement en la mesure du diamètre de la tumeur. 
 Nous discuterons finalement du caractère non prédictif de notre modèle en utilisant seulement des scanners, dans le sens où le comportement de la lésion dans les premiers mois, n'est pas suffisant pour prédire la réponse au traitement. Des données histologiques, comme des biopsies ou de l'imagerie fonctionnelle par exemple, seront intégrées dans de futurs travaux pour palier à ces inconvénients.
 \end{abstract}
  \section{Introduction}
-Les tumeurs du stroma gastrointestinal (GISTs) sont les plus communes de toutes les tumeurs 
-mésenchymateuses du système gastrointestinal avec une incidence de 9 à 14 cas par million de personnes par an (\cf \cite{Nilsson2005}). 
+Les tumeurs du stroma gastro-intestinal (GISTs) sont les plus communes de toutes les tumeurs 
+mésenchymateuses du système gastro-intestinal avec une incidence de 9 à 14 cas par million de personnes par an (\cf \cite{Nilsson2005}). 
 Dans 25\% des cas (\cf \cite{dematteo2000}), ce type 
 de cancer migre au foie. 
 
