--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -1,16 +1,16 @@
-Je tiens à remercier ici  l'ensemble des personnes qui m'ont aidées dans mes travaux de thèse et la réalisation de ce mémoire.
+Je tiens à remercier ici l'ensemble des personnes qui m'ont aidées dans mes travaux de thèse et la réalisation de ce mémoire.
 
 \paragraph{}
-En premier lieu, je remercie Thierry Colin, professeur à l'université de Bordeaux. Tout d'abord en tant que directeur de stage de découverte de première année de master. Il m'a initié au développement de modèles mathématiques pour la cancérologie et ce fut une très bonne expérience scientifique et humaine. Ensuite, en tant que directeur de thèse, il m'a guidé dans mon travail tout au long de ces 3 ans et m'a aidé à trouver des solutions pour avancer (ou pour ne pas perdre son temps). 
+En premier lieu, je remercie Thierry Colin, professeur de mathématiques de l'Institut Polytechnique de Bordeaux et directeur du cluster d'excellence CPU de l'Université de Bordeaux. Tout d'abord en tant que directeur de stage de découverte de première année de master. Il m'a initié au développement de modèles mathématiques pour la cancérologie et ce fut une très bonne expérience scientifique et humaine. Ensuite, en tant que directeur de thèse, il m'a guidé dans mon travail tout au long de ces 3 ans et m'a aidé à trouver des solutions pour avancer (ou pour ne pas perdre son temps). 
 
 \paragraph{}
 Je remercie aussi Olivier Saut, chargé de recherche CNRS, qui m'a épaulé au cours de ces 3 années également. Il m'a particulièrement aidé sur l'aspect numérique, logiciel et informatique de ma thèse. Je lui suis reconnaissant pour sa patience lors de la résolution des différents problèmes informatiques que j'ai pu rencontrer. 
 
 \paragraph{}
-Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lectures et relectures minutieuses et ses corrections effectuées sur l'ensemble de mes productions écrites~: publications et ce manuscrit entre autre.
+Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lectures et relectures minutieuses et ses corrections effectuées sur l'ensemble de mes productions écrites~: publications et ce manuscrit entre autres.
 
 \paragraph{}
-Je remercie François Cornelis, radiologue du CHU de Bordeaux, pour sa collaboration. Merci à lui d'avoir pris le temps de répondre à l'ensemble de mes interrogations d'ordre cliniques et biologiques sur les mécanismes des cancers (et plus particulièrement du GIST et des métastases hépatiques), des traitements et de l'imagerie notamment. Les discussions avec François ont toujours été très enrichissantes pour moi. 
+Je remercie François Cornelis, radiologue du CHU de Bordeaux, pour sa collaboration. Merci à lui d'avoir pris le temps de répondre à l'ensemble de mes interrogations d'ordre clinique et biologique sur les mécanismes des cancers (et plus particulièrement du GIST et des métastases hépatiques), des traitements et de l'imagerie notamment. Les discussions avec François ont toujours été très enrichissantes pour moi. 
 
 \paragraph{}
 Je remercie Hassan Fathallah-Shaykh, professeur de l'université de l'Alabama à Birmingham, pour le temps qu'il m'a consacré. En particulier, sa relecture de ma publication a particulièrement contribué  à l'amélioration de celle-ci.
@@ -19,10 +19,10 @@ Je remercie Hassan Fathallah-Shaykh, professeur de l'université de l'Alabama à
 Je remercie également Patricio Cumsille, chercheur de l'université du Biobío (Chili) et de l'université du Chili (Santiago, Chili), pour sa collaboration. Il a étudié avec moi, lors de sa visite d'un an en France, au sein de notre équipe de recherche, un modèle qui donne suite à celui présenté dans ce manuscrit. 
 
 \paragraph{}
-Je remercie aussi, l'ensemble des personnes avec qui j'ai pu tour à tour partager un bureau. Michaël Leguèbe, Julie Joie, Manon Deville, Thibaut Kritter et Guillaume Dechristé notamment, pour l'intérêt porté à mes questions ouvertes et les réponses qu'ils ont apportées.
+Je remercie aussi, l'ensemble des personnes avec qui j'ai pu tour à tour partager un bureau. Michaël Leguèbe, Julie Joie, Manon Deville, Thibaut Kritter et Guillaume Dechristé notamment, pour l'intérêt porté à mes questions ouvertes et les réponses qu'ils m'ont apportées.
 
 \paragraph{}
-Je remercie également l'ensemble des doctorants de l'équipe MC2\footnote{Modelling, Control and Computations}, récemment divisée en deux nouvelles équipes (MEMPHYS\footnote{Modeling Enablers for Multi-PHysics and InteractionS} et MONC\footnote{Modélisation Mathématique pour l'Oncologie}), qui au fil du temps sont devenus bien plus que de simple collègue, en particulier Hervé Ung, Alexia de Brauer, Thomas Michel, Etienne Baratchart et Alice Raeli. Les diverses débats abordés et expériences partagées avec eux, scientifiques ou non d'ailleurs, ont été une occasion de se cultiver toujours un peu plus.
+Je remercie également l'ensemble des doctorants de l'équipe MC2\footnote{Modelling, Control and Computations}, récemment divisée en deux nouvelles équipes (MEMPHYS\footnote{Modeling Enablers for Multi-PHysics and InteractionS} et MONC\footnote{Modélisation Mathématique pour l'Oncologie}), qui au fil du temps sont devenus bien plus que de simples collègues, en particulier Hervé Ung, Alexia de Brauer, Thomas Michel, Etienne Baratchart et Alice Raeli. Les divers débats abordés et expériences partagées avec eux, scientifiques ou non d'ailleurs, ont été une occasion de se cultiver toujours un peu plus.
 
 \paragraph{}
 Je remercie également l'ensemble des bonnes volontés qui ont consacré de leur temps pour relire tout ou partie de mon manuscrit, et d'en avoir décelé les fautes et coquilles en tout genre. 
