--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -1,4 +1,4 @@
-Je tiens à remercier ici l'ensemble des personnes qui m'ont aidées dans mes travaux de thèse et la réalisation de ce mémoire.
+Je tiens à remercier ici l'ensemble des personnes qui m'ont aidé dans mes travaux de thèse et la réalisation de ce mémoire.
 
 \paragraph{}
 En premier lieu, je remercie Thierry Colin, professeur de mathématiques de l'Institut Polytechnique de Bordeaux et directeur du cluster d'excellence CPU de l'Université de Bordeaux. Tout d'abord en tant que directeur de stage de découverte de première année de master. Il m'a initié au développement de modèles mathématiques pour la cancérologie et ce fut une très bonne expérience scientifique et humaine. Ensuite, en tant que directeur de thèse, il m'a guidé dans mon travail tout au long de ces 3 ans et m'a aidé à trouver des solutions pour avancer (ou pour ne pas perdre son temps). 
@@ -11,6 +11,10 @@ Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lect
 
 \paragraph{}
 Je remercie François Cornelis, radiologue du CHU de Bordeaux, pour sa collaboration. Merci à lui d'avoir pris le temps de répondre à l'ensemble de mes interrogations d'ordre clinique et biologique sur les mécanismes des cancers (et plus particulièrement du GIST et des métastases hépatiques), des traitements et de l'imagerie notamment. Les discussions avec François ont toujours été très enrichissantes pour moi. 
+
+\paragraph{}
+Je tiens à remercier Stéphanie Salmon et Simona Mancini d'avoir accepté de rapporter mon manuscrit de thèse.\todo{remerciements jury}
+
 
 \paragraph{}
 Je remercie Hassan Fathallah-Shaykh, professeur de l'université de l'Alabama à Birmingham, pour le temps qu'il m'a consacré. En particulier, sa relecture de ma publication a particulièrement contribué  à l'amélioration de celle-ci.
@@ -26,4 +30,9 @@ Je remercie également l'ensemble des doctorants de l'équipe MC2\footnote{Model
 
 \paragraph{}
 Je remercie également l'ensemble des bonnes volontés qui ont consacré de leur temps pour relire tout ou partie de mon manuscrit, et d'en avoir décelé les fautes et coquilles en tout genre. 
-%Merci notamment à Vinciane, Cynthia
+Merci notamment à Vinciane, Cynthia et Eléonore notamment pour leurs contributions à cette tâche non des plus aisées.
+
+\paragraph{}
+Enfin, je remercie tout particulièrement Vinciane pour sa bienveillance et son soutien au quotidien. 
+Merci de la force et de la motivation que tu me donnes. 
+Merci de ta patience et de ta compréhension face à mes journées de travail qui se sont allongées et intensifiées durant la période de rédaction du présent manuscrit. 
