--- a/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
+++ b/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
@@ -350,7 +350,7 @@ Notez que la densité de cellules saines~$S$ est donnée par~\eqref{eq_saturatio
 
 
 %%%%%% Rajout par rapport à l'article
-\subsection{Propriétés mathématiques du modèle}
+\subsection{Propriétés mathématiques du modèle\todo{Prop du modèle : Section 2.3 ou sous-section 2.2.3 ?}}
 \subsubsection{Positivité}
 \begin{prop}\label{prop:positivite_modele}
 Dans le modèle~\eqref{eq_transport_pop}, si
