--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -36,3 +36,20 @@ Merci notamment à Vinciane, Cynthia et Eléonore notamment pour leurs contribut
 Enfin, je remercie tout particulièrement Vinciane pour sa bienveillance et son soutien au quotidien. 
 Merci de la force et de la motivation que tu me donnes. 
 Merci de ta patience et de ta compréhension face à mes journées de travail qui se sont allongées et intensifiées durant la période de rédaction du présent manuscrit. 
+
+\subsection*{Financements / Funding}
+Ces travaux ont été financés par l'Université de Bordeaux. 
+Merci également à l'INRIA et au CNRS d'avoir financée plusieurs missions en France et à l'étranger.
+
+
+\paragraph{}
+This study was supported by a public grant from the French National Research
+Agency within the context of the Investments for the Future Program, referenced ANR-10-LABX-57 and named TRAIL
+and with the financial support from the French State, managed by the French National Research Agency (ANR) in the frame of the "Investments for the future" Programme IdEx Bordeaux - CPU (ANR-10-IDEX-03-02).
+
+
+\paragraph{}
+Experiments presented in this paper were carried out using the PlaFRIM experimental testbed,
+being developed under the Inria DIHPES development action with support from LABRI and
+IMB and other entities: Conseil Régional d’Aquitaine, FeDER, Université de Bordeaux and
+CNRS (see \url{https://plafrim.bordeaux.inria.fr/})
